--- a/source-js/package.json
+++ b/source-js/package.json
@@ -1,31 +1,32 @@
 {
-    "name": "client",
+    "name": "cytos",
     "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
+    "description": "Cytos Desktop",
+    "main": "./main/index.js",
     "scripts": {
         "dev": "webpack serve --mode=development",
         "build": "webpack build --mode=production",
-        "start": "electron ./main/index.js"
+        "start": "electron ./main/index.js",
+        "package": "electron-builder --win -c build.json"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "dependencies": {
+    "devDependencies": {
+        "electron": "^17.0.0",
         "@hookstate/core": "^3.0.13",
         "@types/node": "^17.0.15",
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
         "@types/react-tabs": "^2.3.4",
         "css-loader": "^6.6.0",
-        "electron": "^17.0.0",
+        "electron-builder": "^22.14.13",
         "file-loader": "^6.2.0",
         "file-saver": "^2.0.5",
         "gl-matrix": "^3.4.3",
         "html-webpack-plugin": "^5.5.0",
         "mobx-react-lite": "^3.2.3",
         "node-addon-api": "^4.3.0",
-        "pako": "^2.0.4",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-modal": "^3.14.4",
